--- a/test.html
+++ b/test.html
@@ -1,3 +1,13 @@
-<h1> Hey I'm a heading 1 </h1> 
-<p>Hey Im a paragraph</p>
-<a href="https://www.google.com" target="_blank" title="Lets go to google">Click me. I'm alink</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test page updated</title>
+</head>
+<body>
+	<h1> Hey I'm a heading 1 </h1> 
+	<p>Hey Im a <b>paragraph</b> asshole</p>
+	<a href="https://www.google.com" target="_blank" title="Lets go to google">Click me. I'm alink</a>
+	<p> My name is: <br> kitty cat </p>
+	<img src="https://www.humanesociety.org/sites/default/files/styles/1240x698/public/2018/06/cat-217679.jpg?h=c4ed616d&itok=3qHaqQ56">
+</body>
+</html>
