removed few text

--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1> Hey I'm a heading 1 </h1> 
-	<p>Hey Im a <b>paragraph</b> asshole</p>
+	<p>Hey Im a <b>paragraph</b> .. ok bye</p>
 	<a href="https://www.google.com" target="_blank" title="Lets go to google">Click me. I'm alink</a>
 	<p> My name is: <br> kitty cat </p>
 	<img src="https://www.humanesociety.org/sites/default/files/styles/1240x698/public/2018/06/cat-217679.jpg?h=c4ed616d&itok=3qHaqQ56">
